--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,9 @@
 FROM node:18
 
 WORKDIR /usr/src/app
+COPY  . .
+RUN npm install
+
 RUN apt-get update && apt-get install -y wget
 
 ENV DOCKERIZE_VERSION v0.6.1
